--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "mongoose": "^6.0.5",
     "mongoose-findorcreate": "^3.0.0",
     "multer": "^1.4.3",
+    "multer-gridfs-storage": "^5.0.2",
     "multer-storage-cloudinary": "^4.0.0",
     "nodemailer": "^6.6.3",
     "nodemon": "^2.0.12",
