--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Akshat, Ninad, Jay, Chaitanya",
   "license": "ISC",
   "dependencies": {
+    "connect-flash": "^0.1.1",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "ejs": "^3.1.6",
